--- a/week1/index.html
+++ b/week1/index.html
@@ -13,7 +13,7 @@
         <!-- <div class="container"> -->
             <div class="name">
                 <div class="container">
-                    <h1>Sam<br>Yang</h1>
+                    <h1>Joann<br>Chen</h1>
                 </div>
             </div>
             <div class="avator">
@@ -36,10 +36,10 @@
                             <p>應屆畢業生 / 接案設計師 / UI設計實習生</p>
                         </div>
                         <div class="more">
-                                <p>UI 設計修行中 / 立志當斜槓青年<br>
-                                獨立接案，內容涵蓋:<br>
-                                品牌規劃、視覺設計、編輯設計、標準字、物件及印刷品設計等。
-                                </p>
+                            <p>UI 設計修行中 / 立志當斜槓青年<br>
+                            獨立接案，內容涵蓋:<br>
+                            品牌規劃、視覺設計、編輯設計、標準字、物件及印刷品設計等。
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -51,9 +51,8 @@
                         <span>EDUCATION</span>
                     </div>
                     <ul class="content">
-                        <li>國立六角師範大學 視覺設計學系 學士學位|2016-2020</li>
-                        <li>國立六角高級中學 美術班|2013-2016</li>
-                        <li>國立六角高級中學 美術班|2013-2016</li>
+                        <li>國立六角師範大學 視覺設計學系 學士學位 | 2016-2020</li>
+                        <li>國立六角高級中學 美術班 | 2013-2016</li>
                     </ul>
                 </div>
             </section>
@@ -72,12 +71,9 @@
                                 <li>Adobe illustrator</li>
                                 <li>Adobe XD</li>
                                 <li>Adobe Indesign</li>
-                                <li>Adobe C4D</li>
-                                <li>Adobe Photoshop</li>
-                                <li>Adobe Photoshop</li>
-                                <li>Adobe Photoshop</li>
-                                <li>Adobe Photoshop</li>
-                                <li>Adobe Photoshop</li>
+                                <li>C4D</li>
+                                <li>Adobe Premiere</li>
+                                <li>語言：中文、英文</li>
                             </ul>
                         </div>
                     </div>
@@ -87,7 +83,8 @@
                 <div class="container">
                     <div class="exp-box">
                         <div class="title">
-                            <h2>工作經驗 WORK EXPERIENCE</h2>
+                            <h2>工作經驗</h2>
+                            <span>WORK EXPERIENCE</span>
                         </div>
                         <div class="content">
                             <ul>
