--- a/week1/index.html
+++ b/week1/index.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>履歷設計</title>
     <link rel="stylesheet" href="css/all.css">
 </head>
 <body>
-    <!-- ???到底怎麼命名才好 -->
-    <!-- <img src="https://s.yimg.com/cv/apiv2/twfrontpage/doodle/202004_TW_desktop_homerun@2x_coronavirus.gif" alt=""> -->
+   
     <div class="wrapper">
-        <!-- <div class="container"> -->
             <div class="name">
                 <div class="container">
                     <h1>Joann<br>Chen</h1>
@@ -60,10 +58,8 @@
                 <div class="container">
                     <div class="skill-box">
                         <div class="title">
-                            <!-- <div class="title-item"> -->
-                                <h2>技能</h2>
-                                <span>SKILLS</span>
-                            <!-- </div> -->
+                            <h2>技能</h2>
+                            <span>SKILLS</span>
                         </div>
                         <div class="content">
                             <ul>
