--- a/week3&4/source/glasses.html
+++ b/week3&4/source/glasses.html
@@ -39,27 +39,27 @@
         </section>
         <section class="web-page feature">
             <div class="container">
-                <h2>用專業的心，做專業的事</h2>
+                <h2 class="title">用專業的心，做專業的事</h2>
                 <ul>
-                    <li>
+                    <li class="order-3">
                         <span class="img-wrap"><img src="./assets/images/iconfinder_circle-dollar_430089.svg" alt=""></span>
                         <h3>單一價格</h3>
-                        <p>無論任何度數皆不需追加費用 即可擁有適合自己的薄型球面 鏡片。</p>
+                        <p class="text-justify">無論任何度數皆不需追加費用 即可擁有適合自己的薄型球面 鏡片。</p>
                     </li>
-                    <li>
+                    <li class="order-1">
                         <span class="img-wrap"><img src="./assets/images/iconfinder_clock-1_430090.svg" alt=""></span>
                         <h3>20 分鐘即可取件</h3>
-                        <p>為了您的寶貴時間著想，以豐 富專業知識與技術將結帳到交 件的時間縮減至最快 20 分鐘 即可完成。</p>
+                        <p class="text-justify">為了您的寶貴時間著想，以豐 富專業知識與技術將結帳到交 件的時間縮減至最快 20 分鐘 即可完成。</p>
                     </li>
-                    <li>
+                    <li class="order-2">
                         <span class="img-wrap"><img src="./assets/images/iconfinder_heart_430099.svg" alt=""></span>
                         <h3>安心售後服務</h3>
-                        <p>我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
+                        <p class="text-justify">我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
                     </li>
-                    <li>
+                    <li class="order-4">
                         <span class="img-wrap"><img src="./assets/images/iconfinder_glasses_430098 (1).svg" alt=""></span>
                         <h3>關於鏡片</h3>
-                        <p>使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
+                        <p class="text-justify">使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
                     </li>
                 </ul>
             </div>
