--- a/week3&4/source/glasses.html
+++ b/week3&4/source/glasses.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- <script src="./helpers/all.css"></script> -->
     <script src="https://kit.fontawesome.com/77513e405a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./helpers/all.css">
+    <link rel="stylesheet" href="./sass/all.css">
     <title>Document</title>
 </head>
 <body>
@@ -106,6 +106,6 @@
         <footer></footer>
     </main>
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="./helpers/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
