還差classic手機板...

--- a/week4/source/glasses.html
+++ b/week4/source/glasses.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- <script src="./helpers/all.css"></script> -->
-    <script src="https://kit.fontawesome.com/77513e405a.js" crossorigin="anonymous"></script>
+    <!-- <async script src="https://kit.fontawesome.com/77513e405a.js" crossorigin="anonymous"></script> -->
+    <!-- <script src="https://kit.fontawesome.com/77513e405a.js" crossorigin="anonymous"></script> -->
     <link rel="stylesheet" href="./sass/all.css">
     <title>Document</title>
 </head>
@@ -63,39 +64,38 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> 
         <section class="web-page classic">
             <div class="container">
                 <h2 class="title">經典系列鏡框</h2>
                 <ul>
+                    <!-- <li class="optical-item"> -->
                     <li class="classic-item optical">
                         <div class="photo"></div>
                         <div class="product-name">
-                            <span class="icon"></span>
-                            <p class="text"></p>
+                            <!-- <span class="icon"></span> -->
+                            <span></span>
+                            <h3>optical</h3>
                         </div>
                     </li>
+                    <!-- <li class="sunglasses-item"> -->
                     <li class="classic-item sunglasses">
                         <div class="photo"></div>
                         <div class="product-name">
-                            <span class="icon"></span>
-                            <p class="text"></p>
+                            <span></span>
+                            <h3>sunglasses</h3>
                         </div>
                     </li>
+                    <!-- <li class="functional-item"> -->
                     <li class="classic-item functional">
                         <div class="photo"></div>
                         <div class="product-name">
-                            <span class="icon"></span>
-                            <p class="text"></p>
+                            <span></span>
+                            <h3>functional</h3>
                         </div>
                     </li>
-                </ul>
-               
+                </ul>    
             </div>
-        </section>
-       
-        <section class="web-page">
-            <div class="container"></div>
         </section>
         <section class="web-page">
             <div class="container"></div>
@@ -105,7 +105,7 @@
         </section>
         <footer></footer>
     </main>
-    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="./js/script.js"></script>
+    <!-- <script src="/node_modules/jquery/dist/jquery.min.js"></script> -->
+    <!-- <script src="./js/script.js"></script> -->
 </body>
 </html>
