5/7... 費了一個晚上

--- a/week4/source/glasses.html
+++ b/week4/source/glasses.html
@@ -97,8 +97,25 @@
                 </ul>    
             </div>
         </section>
-        <section class="web-page">
-            <div class="container"></div>
+        <!--聯名設計區塊-->
+        <section class="web-page joint">
+            <div class="container">
+                <div class="title">聯名設計鏡框</div>
+                <ul class="joint-list">
+                    <li class="joint-list-item1">
+                        <div class="left-col">
+                            <img src="" alt="">
+                        </div>
+                        <div class="right-col">
+                            <img src="" alt="">
+                            <div>
+                                
+                            </div>
+                        </div>
+                    </li>
+                    <li class="joint-list-item2"></li>
+                </ul>
+            </div>
         </section>
         <section class="web-page">
             <div class="container"></div>
