--- a/week4/source/glasses.html
+++ b/week4/source/glasses.html
@@ -102,21 +102,92 @@
             <div class="container">
                 <div class="title">聯名設計鏡框</div>
                 <ul class="joint-list">
-                    <li class="joint-list-item1">
-                        <div class="left-col">
-                            <img src="" alt="">
+                    <li class="joint-list-item1 d-flex">
+                        <div class="left-col mr-1">
+                            <img src="./assets/images/joint_1.png" alt="">
                         </div>
                         <div class="right-col">
-                            <img src="" alt="">
-                            <div>
-                                
+                            <img class="mb-1" src="./assets/images/joint_2.png" alt="">
+                            <div class="r-c-body1 d-flex">
+                                <img class="mr-1" src="./assets/images/joint_3.png" alt="">
+                                <div class="r-c-body2">
+                                    <img src="./assets/images/joint_4.png" alt="">
+                                    <!-- <div class="r-"> -->
+                                        <div>
+                                            <img src="./assets/images/joint_5.png" alt="">
+                                            <span class="more">MORE</span>
+                                        </div>
+                                    <!-- </div> -->
+                                </div>
                             </div>
                         </div>
                     </li>
-                    <li class="joint-list-item2"></li>
+                    <li class="joint-list-item2 ">
+                        <ul class="d-flex ">
+                            <li class="double">
+                                <img src="./assets/images/double.png" alt="">
+                                <span>Double A+</span>
+                            </li>
+                            <li class="youth">
+                                <img src="./assets/images/youth.png" alt="">
+                                <span>youth</span>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </section>
+        <!--顧客推薦區塊-->
+        <section class="web-page customer">
+            <div class="container">
+                <h2 class="title text-white">
+                    顧客推薦
+                </h2>
+                <ul class="d-flex">
+                    <li>
+                        <div class="card">
+                            <div class="card-header"></div>
+                            <div class="card-body">
+                                <h4 class="title-name"></h4>
+                                <p class="txt"></p>
+                                <span></span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="card">
+                            <div class="card-header"></div>
+                            <div class="card-body">
+                                <h4 class="title-name"></h4>
+                                <p class="txt"></p>
+                                <span></span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="card">
+                            <div class="card-header"></div>
+                            <div class="card-body">
+                                <h4 class="title-name"></h4>
+                                <p class="txt"></p>
+                                <span></span>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="card">
+                            <div class="card-header"></div>
+                            <div class="card-body">
+                                <h4 class="title-name"></h4>
+                                <p class="txt"></p>
+                                <span></span>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!--聯絡我們區塊-->
         <section class="web-page">
             <div class="container"></div>
         </section>
