--- a/week4/source/glasses.html
+++ b/week4/source/glasses.html
@@ -100,22 +100,25 @@
         <!--聯名設計區塊-->
         <section class="web-page joint">
             <div class="container">
-                <div class="title">聯名設計鏡框</div>
+                <h2 class="title">聯名設計鏡框</h2>
                 <ul class="joint-list">
                     <li class="joint-list-item1 d-flex">
                         <div class="left-col mr-1">
                             <img src="./assets/images/joint_1.png" alt="">
                         </div>
                         <div class="right-col">
-                            <img class="mb-1" src="./assets/images/joint_2.png" alt="">
+                            <img class="mb-2" src="./assets/images/joint_2.png" alt="">
                             <div class="r-c-body1 d-flex">
                                 <img class="mr-1" src="./assets/images/joint_3.png" alt="">
                                 <div class="r-c-body2">
-                                    <img src="./assets/images/joint_4.png" alt="">
+                                    <img class="mb-1" src="./assets/images/joint_4.png" alt="">
                                     <!-- <div class="r-"> -->
                                         <div>
                                             <img src="./assets/images/joint_5.png" alt="">
-                                            <span class="more">MORE</span>
+                                            <div class="more">
+                                                <span>MORE</span>
+                                                <img src="../source/assets/images/ic_arrow_forward_24px.svg" alt="">
+                                            </div>
                                         </div>
                                     <!-- </div> -->
                                 </div>
@@ -146,41 +149,49 @@
                 <ul class="d-flex">
                     <li>
                         <div class="card">
-                            <div class="card-header"></div>
+                            <div class="card-header">
+                                <img src="../source/assets/images/18.png" alt="">
+                            </div>
                             <div class="card-body">
-                                <h4 class="title-name"></h4>
-                                <p class="txt"></p>
-                                <span></span>
+                                <h4 class="title-name">Jessy</h4>
+                                <p class="txt">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                                <span class="card-footer">Last updated 3 mins ago</span>
                             </div>
                         </div>
                     </li>
                     <li>
                         <div class="card">
-                            <div class="card-header"></div>
+                            <div class="card-header">
+                                <img src="../source/assets/images/25.png" alt="">
+                            </div>
                             <div class="card-body">
-                                <h4 class="title-name"></h4>
-                                <p class="txt"></p>
-                                <span></span>
+                                <h4 class="title-name">Karen</h4>
+                                <p class="txt">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                                <span class="card-footer">Last updated 3 mins ago</span>
                             </div>
                         </div>
                     </li>
                     <li>
                         <div class="card">
-                            <div class="card-header"></div>
+                            <div class="card-header">
+                                <img src="../source/assets/images/36.png" alt="">
+                            </div>
                             <div class="card-body">
-                                <h4 class="title-name"></h4>
-                                <p class="txt"></p>
-                                <span></span>
+                                <h4 class="title-name">Chelsea</h4>
+                                <p class="txt">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                                <span class="card-footer">Last updated 3 mins ago</span>
                             </div>
                         </div>
                     </li>
                     <li>
                         <div class="card">
-                            <div class="card-header"></div>
+                            <div class="card-header">
+                                <img src="../source/assets/images/45.png" alt="">
+                            </div>
                             <div class="card-body">
-                                <h4 class="title-name"></h4>
-                                <p class="txt"></p>
-                                <span></span>
+                                <h4 class="title-name">Jane</h4>
+                                <p class="txt">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                                <span class="card-footer">Last updated 3 mins ago</span>
                             </div>
                         </div>
                     </li>
@@ -188,12 +199,83 @@
             </div>
         </section>
         <!--聯絡我們區塊-->
-        <section class="web-page">
-            <div class="container"></div>
+        <section class="web-page contact-form">
+            <div class="container">
+                <h2 class="title">聯絡我們</h2>
+                <p>我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
+                <div class="form">
+                    <div class="form-group">
+                        <label for="name">姓名</label>
+                        <input type="text" class="form-control" id="name" placeholder="陳小明">
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">聯絡電話</label>
+                        <input type="text" class="form-control" id="phone" placeholder="0912-345-678">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">電子郵件</label>
+                        <input type="text" class="form-control" id="email" placeholder="example@email.com">
+                    </div>
+                    <div class="form-group">
+                        <label for="report">意見反應</label>
+                        <textarea id="report" rows="6" placeholder="請輸入您的意見"></textarea>
+                    </div>
+                    <div class="form-group check d-flex">
+                        <input type="checkbox" id="agree">
+                        <label for="agree">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
+                    </div>
+                </div>
+                <div class="send">
+                    <a href="#" class="btn">確認送出</a>
+                </div>
+            </div>
         </section>
-        <footer></footer>
+        <!--footer區塊-->
+        <footer class="footer bg-primary">
+            <div class="container">
+                <!-- <nav class="footer-nav d-flex justify-content-between align-items-center"> -->
+                <nav class="footer-nav">
+                    <ul class="footer-nav-map">
+                        <li>首頁</li>
+                        <li>系列鏡框</li>
+                        <li>門市據點</li>
+                        <li>部落格</li>
+                        <li>常見問題</li>
+                    </ul>
+                    <ul class="footer-nav-social">
+                        <li><a href="#"><img src="../source/assets/images/ic_social_fb.svg" alt=""></a></li>
+                        <li><a href="#"><img src="../source/assets/images/ic_social_ig.svg" alt=""></a></li>
+                        <li><a href="#"><img src="../source/assets/images/ic_social_line.svg" alt=""></a></li>
+                    </ul>
+                </nav>
+                <nav>
+                    <ul class="footer-nav-info">
+                        <li class="d-flex">
+                            <img src="../source/assets/images/ic_phone_48px.svg" alt="">
+                            <p>0800-000-000</p>
+                        </li>
+                        <li class="d-flex">
+                            <img src="../source/assets/images/ic_mail_outline_24px.svg" alt="">
+                            <p>glasses@business.com</p>
+                        </li>
+                    </ul>
+                    <hr style="margin-bottom:24px">
+                    <!-- <ul class="footer-copyright d-flex align-items-center justify-content-between"> -->
+                    <ul class="footer-copyright">
+                        <li>
+                            <img src="../source/assets/images/ic_log.png" alt="">
+                            <p>Copyright © 2020 Glasses.All rights reserved.</p>
+                        </li>
+                        <li>
+                            <a href="#">隱私權政策</a>
+                            <a href="#">服務條款</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </footer>
     </main>
-    <!-- <script src="/node_modules/jquery/dist/jquery.min.js"></script> -->
-    <!-- <script src="./js/script.js"></script> -->
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
