more動畫 差點忘記commit

--- a/week4/source/glasses.html
+++ b/week4/source/glasses.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- <script src="./helpers/all.css"></script> -->
+    <!--用下面這個就失效了-->
     <!-- <async script src="https://kit.fontawesome.com/77513e405a.js" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://kit.fontawesome.com/77513e405a.js" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/77513e405a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./sass/all.css">
     <title>Document</title>
 </head>
