--- a/glasses_rwd/revice/glasses.html
+++ b/glasses_rwd/revice/glasses.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- <script src="./helpers/all.css"></script> -->
-    <!--用下面這個就失效了-->
+    <!-- 下面加async就失效了 -->
     <!-- <async script src="https://kit.fontawesome.com/77513e405a.js" crossorigin="anonymous"></script> -->
     <script src="https://kit.fontawesome.com/77513e405a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/all.css">
@@ -20,7 +19,7 @@
                 </a>
                 <h1 class="logo">
                     <a href="./glasses.html">
-                        <img src="./images/logo-new_工作區域 1-1.png" alt="glasses">
+                        <img src="./images/logo-new.png" alt="glasses">
                     </a>
                 </h1>
                 <ul class="menu-dropdown text-nowrap">
