--- a/dashboard/src/dashboard.html
+++ b/dashboard/src/dashboard.html
@@ -1,9 +1,7 @@
-
 ---
-title: dashboard
+title: ANSWER後台系統
 layout: ./src/layout.ejs
 engine: ejs
-current: dashboard
 ---
             <div class="col-md-10 ml-auto">
                 <section class="assignment h-100">
@@ -120,14 +118,14 @@ current: dashboard
                                     <!-- <div class="col-md-8 outline"> -->
                                     <div class="col-lg-8 outline">
                                         <div class="tab-content">
-                                            <div class="tab-pane" id="msg1">
+                                            <div class="tab-pane fade" id="msg1">
                                                 <div class="text-right">
                                                     <span class="text-muted">2 comments</span>
                                                 </div>
                                                 <!-- <div class="card min-vh-100">@太長不好處理 -->
                                                 <div class="card overflow-hidden">
                                                     <!-- @border重疊的問題解法 -->
-                                                    <div class="card-header bg-green border border-green">
+                                                    <div class="card-header bg-primary border border-green">
                                                         <div class="d-flex align-items-center">
                                                             <div>
                                                                 <div class="h6 font-weight-light">Chapter Assignment 2 / HTML&CSS</div>
@@ -155,8 +153,7 @@ current: dashboard
                                                                 <p>Hi Teacher, the attached file is my homework of chapter 2. And here comes a question: Why in the following code the height of the div is bigger than the height of the img ? There is a gap below the image, but it doesn’t seems to be a padding/margin. What is the gap or extra space below image?</p>
                                                                 <!-- <div class="btn">HW-2-David.zip</div> !div無效 -->
                                                                 <!-- @theme color明明有增加卻無效 怎麼檢查 -->
-                                                                <!-- @https://ithelp.ithome.com.tw/articles/10159555 如何新增整組的btn bg border也是有看沒有懂 -->
-                                                                <button type="file" class="btn btn-green font-weight-bold" style="background-color:#EDF4EE;">
+                                                                <button type="file" class="btn btn-primary border-primary2 font-weight-bold">
                                                                     <!-- @為何middle反而偏上 -->
                                                                     <!-- <span class="material-icons align-middle align-middle"> -->
                                                                     <span class="material-icons align-bottom">
@@ -293,9 +290,9 @@ current: dashboard
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="tab-pane" id="msg2">task2</div>
-                                            <div class="tab-pane" id="msg3">task3</div>
-                                            <div class="tab-pane" id="msg4">task4</div>
+                                            <div class="tab-pane fade" id="msg2">task2</div>
+                                            <div class="tab-pane fade" id="msg3">task3</div>
+                                            <div class="tab-pane fade" id="msg4">task4</div>
                                         </div>
                                     </div>
                                 </div>
