檔案結構優化

--- a/ReservationWeb/app/index.html
+++ b/ReservationWeb/app/index.html
@@ -11,16 +11,16 @@ current: index
       <div class="row justify-content-center align-items-center">
         <div class="col-12">
           <div class="swiper-container">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide slide1">
+            <ul class="swiper-wrapper">
+              <li class="swiper-slide slide1">
                 <div class="row h-100 justify-content-center align-items-center">
                   <div class="col-10" data-aos="fade-up" data-aos-duration="1500">
                     <h2 class="h1 mb-0 text-white text-center d-none d-md-block">Discover your ideal hotel</h2>
                     <h2 class="mb-0 text-white text-center d-md-none">Discover your ideal hotel</h2>
                   </div>
                 </div>
-              </div>
-            </div>
+              </li>
+            </ul>
             <!-- If we need navigation buttons -->
             <div class="swiper-button-prev text-white"></div>
             <div class="swiper-button-next text-white"></div>
@@ -210,10 +210,10 @@ current: index
 
     </div>
     <div class="swiper-container" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="900">
-      <div class="swiper-wrapper">
+      <ul class="swiper-wrapper">
         <!-- @@好像有點卡 -->
         <!-- ##todo aos缺點 slide一個一個加 pc跟m時間沒辦法錯開 -->
-        <div class="swiper-slide">
+        <li class="swiper-slide">
           <!-- ##純card+card-body -->
           <div class="card border-0">
             <!-- @@todo inner__img -->
@@ -233,8 +233,8 @@ current: index
               <p class="mb-1">TWD 2,480<small class="text-muted ml-1"><del>TWD 3,980</del></small></p>
             </div>
           </div>
-        </div>
-        <div class="swiper-slide">
+        </li>
+        <li class="swiper-slide">
           <div class="card border-0">
             <img src="assets/images/top2.jpg" alt="" class="inner__img object--cover rounded--deepen">
             <div class="card-body pl-0 pt-1">
@@ -250,8 +250,8 @@ current: index
               <p class="mb-1">TWD 3,380</p>
             </div>
           </div>
-        </div>
-        <div class="swiper-slide">
+        </li>
+        <li class="swiper-slide">
           <div class="card border-0">
             <img src="assets/images/top3.jpg" alt="" class="inner__img object--cover rounded--deepen">
             <div class="card-body pl-0 pt-1">
@@ -267,8 +267,8 @@ current: index
               <p class="mb-1">TWD 4,780</p>
             </div>
           </div>
-        </div>
-        <div class="swiper-slide">
+        </li>
+        <li class="swiper-slide">
           <div class="card border-0">
             <img src="assets/images/top4.jpg" alt="" class="inner__img object--cover  rounded--deepen">
             <div class="card-body pl-0 pt-1">
@@ -284,8 +284,8 @@ current: index
               <p class="mb-1">TWD 1,980</p>
             </div>
           </div>
-        </div>
-      </div>
+        </li>
+      </ul>
       <!-- Add Arrows -->
       <!-- todo:位置再往外，swiper-container會覆蓋 -->
       <!-- todo 被隱藏住了 -->
@@ -380,8 +380,8 @@ current: index
     <!-- swiper 輪播 -->
     <!-- @@好維護就是讓class都可見嗎vs第一個swiper -->
     <div class="swiper-container">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">
+      <ul class="swiper-wrapper">
+        <li class="swiper-slide" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">
           <div class="card border-0">
             <img src="assets/images/italy.jpg" alt="" class="inner__img object--cover rounded--deepen mb-2">
             <div class="card-body px-0">
@@ -389,8 +389,8 @@ current: index
               <p>Italy is the fifth most visited country in the world, with a total of 52.3 million…</p>
             </div>
           </div>
-        </div>
-        <div class="swiper-slide" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="400">
+        </li>
+        <li class="swiper-slide" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="400">
           <div class="card border-0">
             <img src="assets/images/Thailand.jpg" alt="" class="inner__img object--cover rounded--deepen mb-1">
             <div class="card-body px-0">
@@ -398,8 +398,8 @@ current: index
               <p>Asian tourists primarily visit Thailand for Bangkok and the historical, natural, and…</p>
             </div>
           </div>
-        </div>
-        <div class="swiper-slide" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="600">
+        </li>
+        <li class="swiper-slide" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="600">
           <div class="card border-0">
             <img src="assets/images/NewZealand.jpg" alt="" class="inner__img object--cover rounded--deepen mb-1">
             <div class="card-body px-0">
@@ -407,9 +407,9 @@ current: index
               <p>The national cuisine has been described as Pacific Rim, incorporating the native Māori…</p>
             </div>
           </div>
-        </div>
+        </li>
 
-      </div>
+      </ul>
       <!-- Add Arrows -->
       <button class="custom__swiper-button-next swiper-button-next btn btn-secondary btn-sm rounded-circle"> </button>
     </div>
