--- a/ReservationWeb/app/index.html
+++ b/ReservationWeb/app/index.html
@@ -295,6 +295,8 @@ current: index
     </div>
   </section>
 
+  <!-- card & 助教怎麼判斷-->
+
   <!-- Popular Destinations -->
   <!-- todo改用折疊 -->
   <!-- ##_有關聯性 -->
@@ -417,6 +419,7 @@ current: index
   </section>
 
   <!-- 訂閱區塊 -->
+  <!-- ##doto 改用 Jumbotron -->
   <section class="section__subscribe d-flex align-items-center py-3 bg-secondary">
     <div class="container">
       <form class="row flex-column align-items-center">
